...
                .align(Alignment.TopCenter)
                .widthIn(max = 600.dp)
                .fillMaxWidth()
                .verticalScroll(rememberScrollState())
                .selectableGroup()
                .padding(horizontal = 24.dp, vertical = 16.dp)
                .testTag("reading-voice-sheet"),
            verticalArrangement = Arrangement.spacedBy(12.dp)
        ) {
            Column {
                Row(verticalAlignment = Alignment.CenterVertically) {
                    Text(
                        stringResource(R.string.reading_voice_settings),
...
